Center alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,22 @@ h2 {
   font-weight: 300;
 }
 
+.jumbotron h1 {
+  margin-bottom: 4rem;
+}
+
+.jumbotron h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.jumbotron .age-groups {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.jumbotron .age-groups button {
+  margin: 0px 20px;
+}
 .display-4 {
   font-size: 50px;
   font-weight: bold;
